--- a/src/app/components/card/card.scss
+++ b/src/app/components/card/card.scss
@@ -30,12 +30,13 @@
     padding: 24px;
     font-weight: 500;
     font-size: 14px;
+    gap: 14px;
     line-height: 16.42px;
     background-color: white;
     height: 160px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+
     text-transform: uppercase;
     color: rgba(84, 95, 125, 1);
 
