--- a/src/app/components/navigation/navigation.scss
+++ b/src/app/components/navigation/navigation.scss
@@ -1,10 +1,18 @@
 .nav-container {
   background-color: white;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 0.76fr 2fr;
   align-items: center;
   height: 100px;
   margin: 0 30px;
+}
+
+.search-links-container {
+  display: flex;
+  width: 100%;
+  max-width: 1037px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav-links {
@@ -12,7 +20,10 @@
   color: rgba(33, 63, 125, 1);
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: end;
+  gap: 3rem;
+  width: 40%;
+
   p {
     text-decoration: underline;
     font-size: 1rem;
@@ -30,9 +41,8 @@
     font-size: 1rem;
     font-weight: 500;
 
-
     img {
-     color: rgba(33, 63, 125, 1);
+      color: rgba(33, 63, 125, 1);
     }
   }
 }
