--- a/src/app/components/card/card.scss
+++ b/src/app/components/card/card.scss
@@ -40,14 +40,15 @@
 }
 
 .filter-card-container {
+  box-sizing: border-box;
   position: absolute;
   background-color: white;
-  border: 1px solid blue;
+  border: 1px solid rgba(84, 95, 125, 0.14);
   width: 270px;
   padding: 20px;
   box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.04);
   border-radius: 4px;
-
+  overflow: hidden;
 
   .flex-container {
     display: flex;
@@ -58,7 +59,6 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    
 
     .form-field-item {
       display: flex;
@@ -101,12 +101,10 @@
         color: rgba(84, 95, 125, 1);
       }
     }
-
-
   }
 }
 
-.form-field-btn-group{
+.form-field-btn-group {
   display: flex;
   justify-content: space-around;
   margin-top: 20px;
@@ -122,14 +120,40 @@
   @extend .btn;
   outline: none;
   border: 1px solid rgba(57, 205, 204, 1);
-  background-color:  rgba(57, 205, 204, 1);
+  background-color: rgba(57, 205, 204, 1);
   color: white;
 }
 .outline {
   @extend .btn;
   outline: none;
   border: 1px solid rgba(84, 95, 125, 1);
-  background-color:  white;
+  background-color: white;
   color: rgba(84, 95, 125, 1);
+}
 
+.status-card-container {
+  position: absolute;
+  .items {
+    display: flex;
+    flex-direction: column;
+
+    padding: 20px;
+    box-sizing: border-box;
+    gap: 20px;
+    box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.04);
+    border: 1px solid rgba(84, 95, 125, 0.04);
+    background: rgba(255, 255, 255, 1);
+    border-radius: 4px;
+
+    a {
+      text-decoration: none;
+      color: rgba(84, 95, 125, 1);
+      display: flex;
+      justify-content: start;
+      gap: 8px;
+      align-items: center;
+      font-size: 14px;
+      line-height: 16.42px;
+    }
+  }
 }
