--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -5,7 +5,6 @@
 
   background: rgba(251, 251, 251, 1);
   display: flex;
-  height: 100%;
   font-family: "Work Sans";
 
   main {
@@ -23,6 +22,7 @@
       font-size: 24px;
       line-height: 28.15px;
       color: rgba(33, 63, 125, 1);
+      font-weight: 500;
     }
   }
 }
