--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -127,6 +127,42 @@
   font-weight: 600;
   color: rgba(255, 255, 255, 1);
   letter-spacing: 0.1em;
+  position: relative;
+  cursor: pointer;
+}
+
+.button-loading {
+  .btn-text {
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  &::after {
+    content: ""; 
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    // background-color: red;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border: 5px solid transparent;
+    border-top-color: white;
+    border-radius: 50%;
+    animation: button-loading-spinner 1s ease infinite;
+
+  }
+  @keyframes button-loading-spinner{
+    from {
+      transform: rotate(0turn)
+    }
+    to {
+      transform: rotate(1turn);
+    }
+    
+  }
 }
 
 .form-button:disabled {
