--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 .sidebar-container {
   font-family: "Work Sans", sans-serif;
   background-color: white;
   width: 283px;
-  padding: 0 30px;
-
   .sidebar-org {
     display: flex;
     align-items: center;
@@ -14,6 +12,23 @@
     color: rgba(33, 63, 125, 1);
     font-weight: 400;
     margin-bottom: 1rem;
+    padding: 0 30px;
+  }
+  .dashboard-link {
+    padding: 0 30px;
+  }
+
+  .active {
+    background: rgba(57, 205, 204, 20%);
+    border-left: 3px solid rgba(57, 205, 204, 1);
+    
+    a {
+      opacity: 1;
+    }
+
+    img span {
+      opacity: 1;
+    }
   }
 }
 
@@ -28,11 +43,29 @@
     height: 40px;
     display: flex;
     align-items: center;
+    padding: 0 30px;
   }
 
   li {
     display: flex;
     align-items: center;
+    padding: 0 30px;
+  }
+
+  &.logout {
+    padding: 0px 30px;
+    color: rgba(33, 63, 125, 1);
+    a {
+      opacity: 1;
+    }
+
+
+    p {
+      padding-top: 40px;
+      font-size: 12px;
+      font-weight: 400;
+      line-height: 14.08px;
+    }
   }
 }
 
