--- a/src/app/components/card/card.scss
+++ b/src/app/components/card/card.scss
@@ -137,7 +137,7 @@
     display: flex;
     flex-direction: column;
 
-    padding: 20px;
+    padding: 6px;
     box-sizing: border-box;
     gap: 20px;
     box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.04);
@@ -146,6 +146,8 @@
     border-radius: 4px;
 
     a {
+      border-radius: 8px;
+      padding: 4px 10px;
       text-decoration: none;
       color: rgba(84, 95, 125, 1);
       display: flex;
@@ -154,6 +156,10 @@
       align-items: center;
       font-size: 14px;
       line-height: 16.42px;
+
+      &:hover {
+        background: rgba(84, 95, 125, 0.1);
+      }
     }
   }
 }
