--- a/src/app/components/pagination/pagination.scss
+++ b/src/app/components/pagination/pagination.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   margin-top: 20px;
 
+
   .pagination-show {
     display: flex;
     max-width: 227px;
@@ -22,11 +23,15 @@
       justify-content: space-around;
       align-items: center;
  
-
+      select {
+        cursor: pointer;
+      }
     }
+
   }
 
   .pagination-row {
+    cursor: pointer;
     display: flex;
     max-width: 262px;
     width: 100%;
