work done - update readme, remove completed task - on login default is now dashboard/users - update api with new mock endpoint - refractor filter card to its own component from card.tsx - add table back to dashbaord page ui - add error message for table api call data

--- a/src/app/components/card/card.scss
+++ b/src/app/components/card/card.scss
@@ -145,7 +145,7 @@
     background: rgba(255, 255, 255, 1);
     border-radius: 4px;
 
-    a {
+    .item {
       border-radius: 8px;
       padding: 4px 10px;
       text-decoration: none;
