--- a/src/app/components/table/table.scss
+++ b/src/app/components/table/table.scss
@@ -72,6 +72,10 @@
     border-bottom: 0;
   }
 
+  td.error-message {
+    color: red;
+  }
+
   .status {
     padding: 0;
     span {
@@ -87,12 +91,12 @@
         background-color: rgba(233, 178, 0, 0.1);
         color: rgba(233, 178, 0, 1);
       }
-  
+
       &.active {
         background-color: rgba(57, 205, 98, 0.1);
         color: rgba(57, 205, 98, 1);
       }
-  
+
       &.inactive {
         background: rgba(84, 95, 125, 0.1);
         color: rgba(84, 95, 125, 1);
@@ -102,6 +106,5 @@
         color: rgba(228, 3, 59, 1);
       }
     }
-
   }
 }
