--- a/src/app/dashboard/users/[userDetails]/page.scss
+++ b/src/app/dashboard/users/[userDetails]/page.scss
@@ -35,6 +35,7 @@
       letter-spacing: 0.1em;
       text-transform: uppercase;
       text-align: center;
+      background-color: transparent;
     }
   
     .blacklist {
