--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -11,7 +11,7 @@
     height: 40px;
     color: rgba(33, 63, 125, 1);
     font-weight: 400;
-    margin-bottom: 1rem;
+    margin: 1.5rem 0;
     padding: 0 30px;
   }
   .dashboard-link {
@@ -61,7 +61,7 @@
 
 
     p {
-      padding-top: 40px;
+      padding-top: 20px;
       font-size: 12px;
       font-weight: 400;
       line-height: 14.08px;
