--- a/src/app/components/tab/tab.scss
+++ b/src/app/components/tab/tab.scss
@@ -29,10 +29,6 @@
   background-color: white;
   padding: 25px;
 
-  // display: flex;
-  // flex-direction: column;
-  // flex-wrap: wrap;
-
   font-family: Work Sans;
 
   h4 {
@@ -57,7 +53,7 @@
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 20px;
-
+    gap: 24px;
     border-bottom: 1px solid rgba(33, 63, 125, 0.1);
 
     div {
@@ -71,7 +67,6 @@
       gap: 8px;
       max-width: 225px;
       width: 100%;
-      margin-bottom: 30px;
 
       p {
         &:first-child {
@@ -96,12 +91,10 @@
     }
 
     &:not(:first-child) {
-      padding-top: 30px;
+      padding-top: 20px;
     }
-
   }
   .guarantors:last-child {
     border-bottom: none;
-
   }
 }
