--- a/src/app/dashboard/users/[userDetails]/page.scss
+++ b/src/app/dashboard/users/[userDetails]/page.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
+  margin-bottom: 40px;
 
   .back-btn {
     color: rgba(84, 95, 125, 1);
@@ -10,7 +11,7 @@
     align-items: center;
     gap: 12px;
   }
-  
+
   .user-btn-actions {
     display: flex;
     width: 100%;
@@ -22,7 +23,7 @@
       width: 50%;
       justify-content: end;
     }
-  
+
     .btn {
       max-width: 170px;
       width: 100%;
@@ -37,28 +38,85 @@
       text-align: center;
       background-color: transparent;
     }
-  
+
     .blacklist {
       @extend .btn;
       border: 1px solid rgba(228, 3, 59, 1);
       color: rgba(228, 3, 59, 1);
     }
-  
+
     .active {
       @extend .btn;
       border: 1px solid rgba(57, 205, 204, 1);
       color: rgba(57, 205, 204, 1);
     }
+  }
 }
 
-}
-
-.user-details-tab-container{
-
+.user-details-tab-container {
   .user-details-card {
     display: flex;
     background-color: white;
+    padding: 40px;
   }
+    .user-avatar-name-id {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 24px;
+    }
 
+    .user-name-id {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 10px;
+
+      h3 {
+        font-size: 22px;
+        color:  rgb(33, 63, 125)
+      }
+      p {
+        font-size: 14px;
+        color: rgb(84 95 125);
+      }
+
+    }
+
+    .vertical-line {
+      width: 1px;
+      background-color: rgb(33, 63, 125);
+      margin: 0 32px;
+      opacity: 0.3
+    }
+    .user-ratings {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+
+      h3 {
+        color: rgb(33, 63, 125);
+        opacity: 0.8
+      }
+    }
+
+    .user-acc-details {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 10px;
+     
+
+      h3 {
+        font-size: 24px;
+       color:  rgb(33, 63, 125)
+      }
+      p {
+        font-size: 12px;
+        color:  rgb(33, 63, 125)
+      }
+    }
 
 }
