--- a/src/app/components/pagination/pagination.scss
+++ b/src/app/components/pagination/pagination.scss
@@ -3,7 +3,6 @@
   justify-content: space-between;
   margin-top: 20px;
 
-
   .pagination-show {
     display: flex;
     max-width: 227px;
@@ -22,12 +21,11 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
- 
+
       select {
         cursor: pointer;
       }
     }
-
   }
 
   .pagination-row {
@@ -65,6 +63,17 @@
         opacity: 1;
       }
     }
-  
+  }
+}
+
+@media (max-width: 600px) {
+  .pagination-container {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 16px;
+
+    .pagination-row {
+      max-width: none;
+    }
   }
 }
