update scss webpack warning

--- a/src/app/components/card/card.scss
+++ b/src/app/components/card/card.scss
@@ -209,7 +209,7 @@
       text-decoration: none;
       color: rgba(84, 95, 125, 1);
       display: flex;
-      justify-content: start;
+      justify-content: flex-start;
       gap: 8px;
       align-items: center;
       font-size: 14px;
