--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -3,7 +3,7 @@
 .sidebar-container {
   font-family: "Work Sans", sans-serif;
   background-color: white;
-  width: 283px;
+  flex-shrink: 0;
   .sidebar-org {
     display: flex;
     align-items: center;
@@ -11,7 +11,7 @@
     height: 40px;
     color: rgba(33, 63, 125, 1);
     font-weight: 400;
-    margin-bottom: 1rem;
+    margin: 1.5rem 0;
     padding: 0 30px;
   }
   .dashboard-link {
@@ -61,7 +61,7 @@
 
 
     p {
-      padding-top: 40px;
+      padding-top: 20px;
       font-size: 12px;
       font-weight: 400;
       line-height: 14.08px;
@@ -82,4 +82,10 @@
   text-decoration: none;
 
 
+}
+
+@media (max-width: 1290px) {
+  .sidebar-container {
+    display: none;
+  }
 }
