--- a/src/app/components/tab/tab.scss
+++ b/src/app/components/tab/tab.scss
@@ -50,10 +50,10 @@
   }
 
   .content-details {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     padding-bottom: 20px;
-    gap: 24px;
+    gap: 20px;
     border-bottom: 1px solid rgba(33, 63, 125, 0.1);
 
     div {
@@ -65,8 +65,7 @@
       flex-direction: column;
       text-transform: uppercase;
       gap: 8px;
-      max-width: 225px;
-      width: 100%;
+      box-sizing: border-box;
 
       p {
         &:first-child {
@@ -86,6 +85,7 @@
           font-weight: 500;
           line-height: 18.77px;
           color: rgba(84, 95, 125, 1);
+          word-wrap: break-word;
         }
       }
     }
@@ -96,5 +96,65 @@
   }
   .guarantors:last-child {
     border-bottom: none;
+  }
+}
+
+@media (max-width: 892px) and (min-width: 853px) {
+  .tab-header .tab {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 852px) {
+  .tab-header .tab {
+    font-size: 13px;
+  }
+  .tab-content .content-details {
+    gap: 24px 12px;
+  }
+}
+
+@media (max-width: 722px) {
+  .tab-header {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 25px;
+    box-sizing: border-box;
+
+    .tab {
+      font-size: 14px;
+      width: 100%;
+      text-align: left;
+      padding: 0;
+      margin: 6px 0;
+    }
+  }
+  .tab-content .content-details {
+    div {
+      p:last-child {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+@media (max-width: 559px) {
+  .tab-content {
+    .content-details {
+      grid-template-columns: repeat(2, 1fr);
+      div {
+        p:last-child {
+          overflow-wrap: anywhere;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .tab-content {
+    .content-details {
+      grid-template-columns: 1fr;
+    }
   }
 }
