--- a/src/app/dashboard/users/[userDetails]/page.scss
+++ b/src/app/dashboard/users/[userDetails]/page.scss
@@ -23,7 +23,7 @@
     .action-btn-group {
       display: flex;
       gap: 20px;
-      width: 50%;
+      width: 60%;
       justify-content: flex-end;
     }
 
@@ -42,7 +42,6 @@
       background-color: transparent;
       cursor: pointer;
       transition: all 0.3s ease;
-
     }
     .btn:hover {
       opacity: 0.8;
@@ -57,7 +56,7 @@
     .blacklist:hover {
       background-color: rgba(228, 3, 59, 0.1); /* Light background on hover */
     }
-  
+
     .blacklist:active {
       transform: translateY(1px); /* Example: Slight downward shift on click */
     }
@@ -71,7 +70,7 @@
     .active:hover {
       background-color: rgba(57, 205, 204, 0.1); /* Light background on hover */
     }
-  
+
     .active:active {
       transform: translateY(1px); /* Example: Slight downward shift on click */
     }
@@ -84,64 +83,122 @@
     background-color: white;
     padding: 40px;
   }
-    .user-avatar-name-id {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 24px;
+  .user-avatar-name-id {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+  }
+
+  .user-name-id {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+
+    h3 {
+      font-size: 22px;
+      color: rgb(33, 63, 125);
     }
+    p {
+      font-size: 14px;
+      color: rgb(84 95 125);
+    }
+  }
 
-    .user-name-id {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: 10px;
+  .vertical-line {
+    width: 1px;
+    background-color: rgb(33, 63, 125);
+    margin: 0 32px;
+    opacity: 0.3;
+  }
+  .user-ratings {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 
+    h3 {
+      color: rgb(33, 63, 125);
+      opacity: 0.8;
+    }
+  }
+
+  .user-acc-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+
+    h3 {
+      font-size: 24px;
+      color: rgb(33, 63, 125);
+    }
+    p {
+      font-size: 12px;
+      color: rgb(33, 63, 125);
+    }
+  }
+}
+
+@media (max-width: 757px) {
+  .btn {
+    font-size: 12px;
+  }
+}
+@media (max-width: 737px) {
+  .user-details-tab-container {
+    .user-name-id,
+    .user-acc-details {
       h3 {
-        font-size: 22px;
-        color:  rgb(33, 63, 125)
+        font-size: 18px;
       }
-      p {
-        font-size: 14px;
-        color: rgb(84 95 125);
-      }
-
     }
+  }
+}
 
+@media (max-width: 727px) {
+  .user-details-tab-container {
+    .user-details-card {
+      flex-direction: column;
+      padding: 40px 20px;
+    }
+    .user-avatar-name-id {
+      justify-content: flex-start;
+      flex-direction: column;
+      align-items: flex-start;
+
+      img {
+        width: 80px;
+        height: 80px;
+      }
+    }
     .vertical-line {
-      width: 1px;
-      background-color: rgb(33, 63, 125);
-      margin: 0 32px;
-      opacity: 0.3
+      width: 100%;
+      height: 1px;
+      margin: 16px 0;
     }
     .user-ratings {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
+      align-items: flex-start;
+    }
+  }
+}
 
-      h3 {
-        color: rgb(33, 63, 125);
-        opacity: 0.8
+@media (max-width: 631px) {
+  .user-header-back-link {
+    margin-bottom: 20px;
+    gap: 24px;
+
+    .user-btn-actions {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 20px;
+
+      .action-btn-group {
+width: 100%;
+justify-content: start;
       }
     }
-
-    .user-acc-details {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: 10px;
-     
-
-      h3 {
-        font-size: 24px;
-       color:  rgb(33, 63, 125)
-      }
-      p {
-        font-size: 12px;
-        color:  rgb(33, 63, 125)
-      }
-    }
-
+  }
 }
