--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 .dashboard-container {
+  position: relative;
   font-family: "Work Sans", sans-serif;
+  height: 100vh;
 
   background: rgba(251, 251, 251, 1);
   display: flex;
