--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -1,82 +1,86 @@
+
+@import '../styles/variables';
+@import '../styles/mixins';
+
+// login-intro-text-style
 .login-intro-text {
   font-family: "Avenir next", sans-serif;
-  display: flex;
-  gap: 5px;
-  flex-direction: column;
+  @include flex(column);
+  gap: $spacing-xs;
 
   h1 {
-    font-size: 28px;
-    font-weight: 700;
-    line-height: 32px;
+    font-size: $font-size-large;
+    line-height: $line-height-large;
+    font-weight: $font-weight-bold;
     letter-spacing: -2.4%;
-    color: rgba(33, 63, 125, 1);
+    color: $color-primary-text;
   }
 
   p {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 27px;
-    color: rgba(84, 95, 125, 1);
+    font-size: $font-size-base;
+    line-height: $line-height-medium;
+    font-weight: $font-weight-regular;
+    color: $color-secondary-text;
   }
 }
 
+// form fields styles
 .form-field {
   position: relative;
-  display: flex;
-  flex-direction: column;
+  @include flex(column);
 
   input {
-    padding: 0 16px;
+    padding: 0 $spacing-md;
     height: 50px;
-    border: 2px solid rgba(84, 95, 125, 0.15);
+    border: 2px solid $color-border;
     background: transparent;
-    border-radius: 5px;
+    border-radius: $radius-xs;
     outline: none;
-    color: #1d1b20;
+    color: $color-text;
     font-size: 1em;
   }
 
   label {
-    font-size: 14px;
+    font-size: $font-size-small;
     position: absolute;
     left: 0;
-    padding: 20px 16px;
+    padding: $spacing-2md $spacing-md;
     pointer-events: none;
-    color: rgba(84, 95, 125, 1);
+    color: $color-secondary-text;
     opacity: 0.6;
     transition: 0.5s;
-    box-shadow: 0px 15px 90px 0px rgba(0, 0, 0, 0.03);
+    box-shadow: 0px 15px 90px 0px $color-shadow;
   }
 
   input:valid,
   input:focus {
-    border: 2px solid rgba(57, 205, 204, 1);
+    border: 2px solid $color-highlight;
   }
 
   input.error {
-    border: 2px solid red;
+    border: 2px solid $color-error;
   }
 
   input:valid ~ label,
   input:focus ~ label {
-    color: rgba(57, 205, 204, 1);
+    color: $color-highlight;
     transform: translateX(10px) translateY(-4px);
     font-size: 10px;
-    padding: 0 2px;
+    padding: 0 $spacing-xxs;
     opacity: 1;
-    background: white;
+    background: $color-background;
     font-weight: 600;
   }
 
   #toggle {
-    font-size: 12px;
+    font-size:$font-size-xsmall;
     font-weight: 600;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    right: 20px;
+    right: $spacing-2md;
     cursor: pointer;
-    color: rgba(57, 205, 204, 1);
+    color: $color-highlight;
   }
 
   .err-msg {
@@ -84,47 +88,47 @@
   }
   .err-text {
     display: block;
-    font-size: 12px;
+    font-size: $font-size-xsmall;
     line-height: 16.39px;
     text-transform: none;
-    padding-top: 6px;
+    padding-top: $spacing-sm;
 
-    color: red;
-    font-size: 12px;
+    color: $color-error;
+    font-size: $font-size-xsmall;
   }
   #toggle.err-msg-toggle {
     top: calc(50% - 8px); /* Adjust the top position relative to the input field height */
   }
 }
 
+// login form styles
 .login-form {
-  display: flex;
-  flex-direction: column;
+  @include flex(column);
   gap: 24px;
-  margin-top: 2rem;
+  margin-top: $spacing-xl;
   p {
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 12px;
-    line-height: 16.39px;
+    font-size: $font-size-xsmall;
+    line-height: $line-height-xsmall;
     letter-spacing: 10%;
-    color: rgba(57, 205, 204, 1);
+    color: $color-highlight;
     letter-spacing: 0.1em;
   }
 }
 
 .form-button {
-  height: 48px;
-  background: rgba(57, 205, 204, 1);
+  height:$height-button;
+  background: $color-highlight;;
   width: 100%;
   border: none;
-  border-radius: 8px;
-  box-shadow: 0px 15px 90px 0px rgba(0, 0, 0, 0.03);
+  border-radius: $radius-sm;
+  box-shadow: 0px 15px 90px 0px $color-border;
   text-transform: uppercase;
-  font-size: 14px;
-  line-height: 19.12px;
-  font-weight: 600;
-  color: rgba(255, 255, 255, 1);
+  font-size: $font-size-small;
+  line-height: $line-height-small;
+  font-weight: $font-weight-medium;
+  color: $color-background;
   letter-spacing: 0.1em;
   position: relative;
   cursor: pointer;
@@ -159,8 +163,8 @@
     right: 0;
     margin: auto;
     border: 5px solid transparent;
-    border-top-color: white;
-    border-radius: 50%;
+    border-top-color: $color-background;
+    border-radius: $radius-round;
     animation: button-loading-spinner 1s ease infinite;
   }
   @keyframes button-loading-spinner {
@@ -174,27 +178,29 @@
 }
 
 .form-button:disabled {
-  background: rgba(190, 226, 227, 0.5);
+  background: $color-disabled;
 }
 
+// Main container styles
 .main-container {
   font-family: "Avenir next", sans-serif;
-  background: rgba(255, 255, 255, 1);
+  background: $color-background;
   width: 80%;
   margin: 0 auto;
   nav {
-    margin-top: 2rem;
+    margin-top: $spacing-xl;
   }
 }
 
 .login-form-container {
-  margin-top: 10rem;
+  margin-top: $spacing-5xl;
 }
 
 .login-container-image {
   display: none;
 }
 
+// media Queries
 @media (min-width: 768px) {
   .main-container {
     width: 100%;
@@ -208,9 +214,7 @@
     }
   }
   .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex(row,center,center);
     height: 100%;
 
     nav {
@@ -227,14 +231,12 @@
     margin-top: 0rem;
     width: 40%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    box-shadow: 0px 15px 90px 0px rgba(0, 0, 0, 0.03);
-    padding: 0 2rem;
+    @include flex(column, center);
+    box-shadow: 0px 15px 90px 0px $color-shadow;
+    padding: 0 $spacing-xxs;
 
     .login-intro-text h1 {
-      font-size: 40px;
+      font-size: $font-size-xlarge;
     }
   }
 }
@@ -248,8 +250,8 @@
     height: 100%;
     width: 50%;
     .login-intro-text h1 {
-      font-size: 55px;
-      line-height: 54.64px;
+      font-size: $font-size-xxlarge;
+      line-height: $line-height-xxlarge;
     }
   }
 
