--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -102,6 +102,10 @@
     top: -7px;
     left: -6px;
     cursor: pointer;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background: transparent;
 
   }
   .sidebar-icon-container-hide {
@@ -111,6 +115,10 @@
     left: 220px;
     z-index: 200;
     cursor: pointer;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background: transparent;
   }
 
   .open {
